Upgrading YAML for Census config-as-code resources to version 0.4

--- a/census/syncs/redshift-test-salesforce-contact.yml
+++ b/census/syncs/redshift-test-salesforce-contact.yml
@@ -1,6 +1,7 @@
 ---
 sync:redshift-test-salesforce-contact:
   paused: false
+  template_sync_identifier: sync:redshift-test-1-salesforce-contact
   behavior:
     operation: upsert
   triggers:
