--- a/census/syncs/snowflake-flamingo-fans-google-ads-customer-list.yml
+++ b/census/syncs/snowflake-flamingo-fans-google-ads-customer-list.yml
@@ -51,8 +51,12 @@ sync:snowflake-flamingo-fans-google-ads-customer-list:
         field_to_match_by: id
   operational_settings:
     alerts:
-      failed_run_notifications:
-        enabled: true
-      failed_record_notifications:
-        enabled: true
-        threshold_percent: 75
+    - type: FailureAlertConfiguration
+      send_for: first_time
+      should_send_recovery: true
+      options: {}
+    - type: InvalidRecordPercentAlertConfiguration
+      send_for: first_time
+      should_send_recovery: true
+      options:
+        threshold: 75
