--- a/census/syncs/snowflake-flamingo-users-salesforce-lead.yml
+++ b/census/syncs/snowflake-flamingo-users-salesforce-lead.yml
@@ -17,6 +17,14 @@ sync:snowflake-flamingo-users-salesforce-lead:
   - from:
       type: column
       data:
+        column_name: USER_ID
+    to:
+      field_name: Id
+    is_primary_identifier: true
+    preserve_values: false
+  - from:
+      type: column
+      data:
         column_name: EMAIL
     to:
       field_name: Email
@@ -36,14 +44,6 @@ sync:snowflake-flamingo-users-salesforce-lead:
       field_name: LastName
     preserve_values: false
   - from:
-      type: column
-      data:
-        column_name: USER_ID
-    to:
-      field_name: Id
-    is_primary_identifier: true
-    preserve_values: false
-  - from:
       type: constant
       data:
         basic_type: text
@@ -53,8 +53,12 @@ sync:snowflake-flamingo-users-salesforce-lead:
     preserve_values: false
   operational_settings:
     alerts:
-      failed_run_notifications:
-        enabled: true
-      failed_record_notifications:
-        enabled: true
-        threshold_percent: 75
+    - type: FailureAlertConfiguration
+      send_for: first_time
+      should_send_recovery: true
+      options: {}
+    - type: InvalidRecordPercentAlertConfiguration
+      send_for: first_time
+      should_send_recovery: true
+      options:
+        threshold: 75
