--- a/census/syncs/redshift-active-golden-users-marketo-lead.yml
+++ b/census/syncs/redshift-active-golden-users-marketo-lead.yml
@@ -39,8 +39,12 @@ sync:redshift-active-golden-users-marketo-lead:
     preserve_values: false
   operational_settings:
     alerts:
-      failed_run_notifications:
-        enabled: true
-      failed_record_notifications:
-        enabled: true
-        threshold_percent: 75
+    - type: FailureAlertConfiguration
+      send_for: first_time
+      should_send_recovery: true
+      options: {}
+    - type: InvalidRecordPercentAlertConfiguration
+      send_for: first_time
+      should_send_recovery: true
+      options:
+        threshold: 75
