--- a/census/syncs/redshift-events-braze-event.yml
+++ b/census/syncs/redshift-events-braze-event.yml
@@ -26,6 +26,13 @@ sync:redshift-events-braze-event:
   - from:
       type: column
       data:
+        column_name: user_id
+    to:
+      field_name: _census_event_tracking_id
+    is_primary_identifier: true
+  - from:
+      type: column
+      data:
         column_name: _file
     to:
       field_name: _file
@@ -94,18 +101,15 @@ sync:redshift-events-braze-event:
       data:
         column_name: user_id
     to:
-      field_name: _census_event_tracking_id
-    is_primary_identifier: true
-  - from:
-      type: column
-      data:
-        column_name: user_id
-    to:
       field_name: external_id
   operational_settings:
     alerts:
-      failed_run_notifications:
-        enabled: true
-      failed_record_notifications:
-        enabled: true
-        threshold_percent: 75
+    - type: FailureAlertConfiguration
+      send_for: first_time
+      should_send_recovery: true
+      options: {}
+    - type: InvalidRecordPercentAlertConfiguration
+      send_for: first_time
+      should_send_recovery: true
+      options:
+        threshold: 75
