--- a/census/syncs/redshift-golden-teams-salesforce-account.yml
+++ b/census/syncs/redshift-golden-teams-salesforce-account.yml
@@ -17,6 +17,14 @@ sync:redshift-golden-teams-salesforce-account:
   - from:
       type: column
       data:
+        column_name: id
+    to:
+      field_name: Company_ID__c
+    is_primary_identifier: true
+    preserve_values: false
+  - from:
+      type: column
+      data:
         column_name: action_count
     to:
       field_name: Action_Count__c
@@ -52,14 +60,6 @@ sync:redshift-golden-teams-salesforce-account:
   - from:
       type: column
       data:
-        column_name: id
-    to:
-      field_name: Company_ID__c
-    is_primary_identifier: true
-    preserve_values: false
-  - from:
-      type: column
-      data:
         column_name: images_added
     to:
       field_name: Images_Added__c
@@ -88,8 +88,12 @@ sync:redshift-golden-teams-salesforce-account:
     preserve_values: false
   operational_settings:
     alerts:
-      failed_run_notifications:
-        enabled: true
-      failed_record_notifications:
-        enabled: true
-        threshold_percent: 75
+    - type: FailureAlertConfiguration
+      send_for: first_time
+      should_send_recovery: true
+      options: {}
+    - type: InvalidRecordPercentAlertConfiguration
+      send_for: first_time
+      should_send_recovery: true
+      options:
+        threshold: 75
