--- a/census/syncs/snowflake-b2b-users-google-cloud-storage-path-to-file-data-m-d-y-csv-1.yml
+++ b/census/syncs/snowflake-b2b-users-google-cloud-storage-path-to-file-data-m-d-y-csv-1.yml
@@ -25,6 +25,13 @@ sync:snowflake-b2b-users-google-cloud-storage-path-to-file-data-m-d-y-csv-1:
   - from:
       type: column
       data:
+        column_name: USER_ID
+    to:
+      field_name: unique_id
+    is_primary_identifier: true
+  - from:
+      type: column
+      data:
         column_name: EMAIL
     to:
       field_name: EMAIL
@@ -103,18 +110,15 @@ sync:snowflake-b2b-users-google-cloud-storage-path-to-file-data-m-d-y-csv-1:
     field_type: String
     follow_source_type: false
     generate_field: true
-  - from:
-      type: column
-      data:
-        column_name: USER_ID
-    to:
-      field_name: unique_id
-    is_primary_identifier: true
   advanced_configuration: {}
   operational_settings:
     alerts:
-      failed_run_notifications:
-        enabled: true
-      failed_record_notifications:
-        enabled: true
-        threshold_percent: 75
+    - type: FailureAlertConfiguration
+      send_for: first_time
+      should_send_recovery: true
+      options: {}
+    - type: InvalidRecordPercentAlertConfiguration
+      send_for: first_time
+      should_send_recovery: true
+      options:
+        threshold: 75
