--- a/census/syncs/snowflake-b2b-users-microsoft-dynamics-contact-1.yml
+++ b/census/syncs/snowflake-b2b-users-microsoft-dynamics-contact-1.yml
@@ -35,8 +35,12 @@ sync:snowflake-b2b-users-microsoft-dynamics-contact-1:
       field_name: lastname
   operational_settings:
     alerts:
-      failed_run_notifications:
-        enabled: true
-      failed_record_notifications:
-        enabled: true
-        threshold_percent: 75
+    - type: FailureAlertConfiguration
+      send_for: first_time
+      should_send_recovery: true
+      options: {}
+    - type: InvalidRecordPercentAlertConfiguration
+      send_for: first_time
+      should_send_recovery: true
+      options:
+        threshold: 75
