--- a/census/syncs/snowflake-e-commerce-customers-netsuite-customer.yml
+++ b/census/syncs/snowflake-e-commerce-customers-netsuite-customer.yml
@@ -44,8 +44,12 @@ sync:snowflake-e-commerce-customers-netsuite-customer:
       field_name: lastName
   operational_settings:
     alerts:
-      failed_run_notifications:
-        enabled: true
-      failed_record_notifications:
-        enabled: true
-        threshold_percent: 75
+    - type: FailureAlertConfiguration
+      send_for: first_time
+      should_send_recovery: true
+      options: {}
+    - type: InvalidRecordPercentAlertConfiguration
+      send_for: first_time
+      should_send_recovery: true
+      options:
+        threshold: 75
