--- a/census/syncs/snowflake-e-commerce-customers-postgres-towns.yml
+++ b/census/syncs/snowflake-e-commerce-customers-postgres-towns.yml
@@ -17,20 +17,24 @@ sync:snowflake-e-commerce-customers-postgres-towns:
   - from:
       type: column
       data:
-        column_name: FIRST_NAME
-    to:
-      field_name: name
-  - from:
-      type: column
-      data:
         column_name: USER_ID
     to:
       field_name: id
     is_primary_identifier: true
+  - from:
+      type: column
+      data:
+        column_name: FIRST_NAME
+    to:
+      field_name: name
   operational_settings:
     alerts:
-      failed_run_notifications:
-        enabled: true
-      failed_record_notifications:
-        enabled: true
-        threshold_percent: 75
+    - type: FailureAlertConfiguration
+      send_for: first_time
+      should_send_recovery: true
+      options: {}
+    - type: InvalidRecordPercentAlertConfiguration
+      send_for: first_time
+      should_send_recovery: true
+      options:
+        threshold: 75
