--- a/census/syncs/snowflake-flamingo-buyers-mixpanel-user-profile.yml
+++ b/census/syncs/snowflake-flamingo-buyers-mixpanel-user-profile.yml
@@ -22,6 +22,13 @@ sync:snowflake-flamingo-buyers-mixpanel-user-profile:
   - from:
       type: column
       data:
+        column_name: USER_ID
+    to:
+      field_name: "$distinct_id"
+    is_primary_identifier: true
+  - from:
+      type: column
+      data:
         column_name: EMAIL
     to:
       field_name: EMAIL
@@ -110,13 +117,6 @@ sync:snowflake-flamingo-buyers-mixpanel-user-profile:
     follow_source_type: true
     generate_field: true
   - from:
-      type: column
-      data:
-        column_name: USER_ID
-    to:
-      field_name: "$distinct_id"
-    is_primary_identifier: true
-  - from:
       type: constant
       data:
         basic_type: text
@@ -128,8 +128,12 @@ sync:snowflake-flamingo-buyers-mixpanel-user-profile:
     generate_field: true
   operational_settings:
     alerts:
-      failed_run_notifications:
-        enabled: true
-      failed_record_notifications:
-        enabled: true
-        threshold_percent: 75
+    - type: FailureAlertConfiguration
+      send_for: first_time
+      should_send_recovery: true
+      options: {}
+    - type: InvalidRecordPercentAlertConfiguration
+      send_for: first_time
+      should_send_recovery: true
+      options:
+        threshold: 75
