--- a/census/syncs/snowflake-new-user-salesforce-contact.yml
+++ b/census/syncs/snowflake-new-user-salesforce-contact.yml
@@ -17,6 +17,14 @@ sync:snowflake-new-user-salesforce-contact:
   - from:
       type: column
       data:
+        column_name: USER_ID
+    to:
+      field_name: External_ID__c
+    is_primary_identifier: true
+    preserve_values: false
+  - from:
+      type: column
+      data:
         column_name: EMAIL
     to:
       field_name: Email
@@ -70,18 +78,14 @@ sync:snowflake-new-user-salesforce-contact:
     to:
       field_name: User_Cohort__c
     preserve_values: false
-  - from:
-      type: column
-      data:
-        column_name: USER_ID
-    to:
-      field_name: External_ID__c
-    is_primary_identifier: true
-    preserve_values: false
   operational_settings:
     alerts:
-      failed_run_notifications:
-        enabled: true
-      failed_record_notifications:
-        enabled: true
-        threshold_percent: 75
+    - type: FailureAlertConfiguration
+      send_for: first_time
+      should_send_recovery: true
+      options: {}
+    - type: InvalidRecordPercentAlertConfiguration
+      send_for: first_time
+      should_send_recovery: true
+      options:
+        threshold: 75
