--- a/census/syncs/snowflake-top-conversion-targets-hubspot-contact.yml
+++ b/census/syncs/snowflake-top-conversion-targets-hubspot-contact.yml
@@ -1,6 +1,6 @@
 ---
 sync:snowflake-top-conversion-targets-hubspot-contact:
-  paused: true
+  paused: false
   behavior:
     operation: update
   triggers:
@@ -55,8 +55,12 @@ sync:snowflake-top-conversion-targets-hubspot-contact:
   advanced_configuration: {}
   operational_settings:
     alerts:
-      failed_run_notifications:
-        enabled: true
-      failed_record_notifications:
-        enabled: true
-        threshold_percent: 75
+    - type: FailureAlertConfiguration
+      send_for: first_time
+      should_send_recovery: true
+      options: {}
+    - type: InvalidRecordPercentAlertConfiguration
+      send_for: first_time
+      should_send_recovery: true
+      options:
+        threshold: 75
