--- a/census/syncs/snowflake-top-conversion-targets-salesforce-account.yml
+++ b/census/syncs/snowflake-top-conversion-targets-salesforce-account.yml
@@ -3,9 +3,11 @@ sync:snowflake-top-conversion-targets-salesforce-account:
   paused: false
   behavior:
     operation: upsert
-  triggers:
-    schedule:
-      frequency: never
+  mode:
+    type: triggered
+    triggers:
+      schedule:
+        frequency: never
   destination:
     connection_identifier: destination:salesforce-demo
     object_identifier: Account
