--- a/census/syncs/redshift-test-1-salesforce-contact.yml
+++ b/census/syncs/redshift-test-1-salesforce-contact.yml
@@ -3,9 +3,11 @@ sync:redshift-test-1-salesforce-contact:
   paused: false
   behavior:
     operation: upsert
-  triggers:
-    schedule:
-      frequency: never
+  mode:
+    type: triggered
+    triggers:
+      schedule:
+        frequency: never
   destination:
     connection_identifier: destination:salesforce-demo
     object_identifier: Contact
