Upgrading YAML for Census config-as-code resources to version 0.73

--- a/census/syncs/snowflake-users-new-mixpanel-user-profile.yml
+++ b/census/syncs/snowflake-users-new-mixpanel-user-profile.yml
@@ -17,9 +17,9 @@ sync:snowflake-users-new-mixpanel-user-profile:
     connection_identifier: destination:mixpanel
     object_identifier: user
   source:
-    type: entity
+    type: dataset
     connection_identifier: data_warehouse:snowflake-demo
-    object_identifier: entity:users-new
+    object_identifier: dataset:users-new
   mappings:
   - from:
       type: column
