--- a/census/datasets/golden-teams-sales-qualified.yml
+++ b/census/datasets/golden-teams-sales-qualified.yml
@@ -1,6 +1,8 @@
 ---
-model:golden-teams-sales-qualified:
+dataset:golden-teams-sales-qualified:
+  type: sql
   name: Golden Teams - Sales Qualified
   query: "Select *\nFrom dev.dbt_marker.golden_teams_sales_qualified "
   description:
+  icon:
   connection: data_warehouse:redshift-demo
