--- a/census/datasets/b2b-users.yml
+++ b/census/datasets/b2b-users.yml
@@ -1,5 +1,6 @@
 ---
-model:b2b-users-1:
+dataset:b2b-users:
+  type: sql
   name: B2B Users
   query: |-
     SELECT
@@ -13,7 +14,7 @@ model:b2b-users-1:
         MOST_RECENT_EVENT_AT,
         FIRST_EVENT_AT,
         SUBSCRIPTION_STATUS
-    FROM "DEMO_DB"."DEMO_DATA"."USERS"
-    LIMIT 300
+    FROM `lithe-elixir-330920.DataTesting.Users` LIMIT 300
   description: Users and their behavioral information from their usage of a B2B Application.
-  connection: data_warehouse:snowflake-demo
+  icon:
+  connection: data_warehouse:bigquery
