--- a/census/datasets/customers.yml
+++ b/census/datasets/customers.yml
@@ -1,5 +1,6 @@
 ---
-model:customers:
+dataset:customers:
+  type: sql
   name: Customers
   query: |-
     SELECT
@@ -17,4 +18,5 @@ model:customers:
     FROM `lithe-elixir-330920.DataTesting.Users`
     LIMIT 300
   description: Customers' information with how they have interacted with our stores.
+  icon:
   connection: data_warehouse:bigquery
