--- a/census/datasets/invoices-netsuite.yml
+++ b/census/datasets/invoices-netsuite.yml
@@ -1,5 +1,6 @@
 ---
-model:invoices-netsuite:
+dataset:invoices-netsuite:
+  type: sql
   name: Invoices (Netsuite)
   query: "WITH INVOICES AS \n(SELECT\n    '2021-09-12 08:19:23'::timestamp_ntz AS
     invoice_date,\n    'Mar-2022' as invoice_month,\n    400005 AS external_id,  \n
@@ -17,4 +18,5 @@ model:invoices-netsuite:
     \   ARRAY_AGG(line_item_object) AS line_items\n FROM invoices\nWHERE invoice_month
     = 'Mar-2022'\nGROUP BY 1,2,3,4,5,6\n    "
   description:
+  icon:
   connection: data_warehouse:snowflake-demo
