Upgrading YAML for Census config-as-code resources to version 0.75

--- a/census/datasets/all-events.yml
+++ b/census/datasets/all-events.yml
@@ -5,4 +5,4 @@ dataset:all-events:
   query: Select * From demo.events
   description:
   icon:
-  connection: data_warehouse:redshift-demo
+  connection: connection:redshift-demo
