--- a/census/datasets/events-new.yml
+++ b/census/datasets/events-new.yml
@@ -5,4 +5,4 @@ dataset:events-new:
   query: SELECT * FROM marker.marker.events
   description:
   icon: "emoji:\U0001F55C"
-  connection: data_warehouse:snowflake-demo
+  connection: connection:snowflake-demo
