--- a/census/datasets/active-customers-netsuite.yml
+++ b/census/datasets/active-customers-netsuite.yml
@@ -5,4 +5,4 @@ dataset:active-customers-netsuite:
   query: "SELECT * \nFROM active_customers_for_finance\nWHERE sales_rep_email = 'sean@getcensus.com'"
   description:
   icon:
-  connection: data_warehouse:redshift-demo
+  connection: connection:redshift-demo
