--- a/census/datasets/b2b-users.yml
+++ b/census/datasets/b2b-users.yml
@@ -17,4 +17,4 @@ dataset:b2b-users:
     FROM `lithe-elixir-330920.DataTesting.Users` LIMIT 300
   description: Users and their behavioral information from their usage of a B2B Application.
   icon:
-  connection: data_warehouse:bigquery
+  connection: connection:bigquery
