--- a/census/datasets/events-1.yml
+++ b/census/datasets/events-1.yml
@@ -5,4 +5,4 @@ dataset:events-1:
   query: SELECT * FROM DEVELOPMENT.DONNY.RAW_EVENT
   description:
   icon:
-  connection: data_warehouse:snowflake-demo
+  connection: connection:snowflake-demo
