--- a/census/datasets/invoices-netsuite.yml
+++ b/census/datasets/invoices-netsuite.yml
@@ -19,4 +19,4 @@ dataset:invoices-netsuite:
     = 'Mar-2022'\nGROUP BY 1,2,3,4,5,6\n    "
   description:
   icon:
-  connection: data_warehouse:snowflake-demo
+  connection: connection:snowflake-demo
