--- a/census/datasets/user-stats.yml
+++ b/census/datasets/user-stats.yml
@@ -22,4 +22,4 @@ dataset:user-stats:
      group by 1;
   description:
   icon:
-  connection: data_warehouse:redshift
+  connection: connection:redshift
