--- a/census/syncs/redshift-golden-teams-salesforce-account.yml
+++ b/census/syncs/redshift-golden-teams-salesforce-account.yml
@@ -9,11 +9,11 @@ sync:redshift-golden-teams-salesforce-account:
       schedule:
         frequency: never
   destination:
-    connection_identifier: destination:salesforce-demo
+    connection_identifier: connection:salesforce-demo
     object_identifier: Account
   source:
     type: model
-    connection_identifier: data_warehouse:redshift-demo
+    connection_identifier: connection:redshift-demo
     object_identifier: model:golden-teams
   mappings:
   - from:
