--- a/census/syncs/snowflake-b2b-users-salesforce-contact-1.yml
+++ b/census/syncs/snowflake-b2b-users-salesforce-contact-1.yml
@@ -10,11 +10,11 @@ sync:snowflake-b2b-users-salesforce-contact-1:
         frequency: never
   service_slice_size: 5000
   destination:
-    connection_identifier: destination:salesforce-demo
+    connection_identifier: connection:salesforce-demo
     object_identifier: Contact
   source:
     type: model
-    connection_identifier: data_warehouse:snowflake-demo
+    connection_identifier: connection:snowflake-demo
     object_identifier: model:b2b-users-1
   mappings:
   - from:
