--- a/census/syncs/snowflake-b2b-users-salesforce-contact.yml
+++ b/census/syncs/snowflake-b2b-users-salesforce-contact.yml
@@ -9,11 +9,11 @@ sync:snowflake-b2b-users-salesforce-contact:
       schedule:
         frequency: never
   destination:
-    connection_identifier: destination:salesforce-demo
+    connection_identifier: connection:salesforce-demo
     object_identifier: Contact
   source:
     type: model
-    connection_identifier: data_warehouse:snowflake-demo
+    connection_identifier: connection:snowflake-demo
     object_identifier: model:b2b-users-1
   mappings:
   - from:
