--- a/census/syncs/snowflake-e-commerce-customers-mixpanel-user-profile.yml
+++ b/census/syncs/snowflake-e-commerce-customers-mixpanel-user-profile.yml
@@ -14,11 +14,11 @@ sync:snowflake-e-commerce-customers-mixpanel-user-profile:
       schedule:
         frequency: never
   destination:
-    connection_identifier: destination:mixpanel
+    connection_identifier: connection:mixpanel
     object_identifier: user
   source:
     type: model
-    connection_identifier: data_warehouse:snowflake-demo
+    connection_identifier: connection:snowflake-demo
     object_identifier: model:e-commerce-customers
   mappings:
   - from:
