--- a/census/syncs/snowflake-e-commerce-customers-netsuite-customer.yml
+++ b/census/syncs/snowflake-e-commerce-customers-netsuite-customer.yml
@@ -9,11 +9,11 @@ sync:snowflake-e-commerce-customers-netsuite-customer:
       schedule:
         frequency: never
   destination:
-    connection_identifier: destination:netsuite
+    connection_identifier: connection:netsuite
     object_identifier: customer
   source:
     type: model
-    connection_identifier: data_warehouse:snowflake-demo
+    connection_identifier: connection:snowflake-demo
     object_identifier: model:e-commerce-customers
   mappings:
   - from:
