--- a/census/syncs/snowflake-flamingo-fans-google-ads-customer-list.yml
+++ b/census/syncs/snowflake-flamingo-fans-google-ads-customer-list.yml
@@ -9,11 +9,11 @@ sync:snowflake-flamingo-fans-google-ads-customer-list:
       schedule:
         frequency: never
   destination:
-    connection_identifier: destination:google-ads
+    connection_identifier: connection:google-ads
     object_identifier: user_data
   source:
     type: segment
-    connection_identifier: data_warehouse:snowflake-demo
+    connection_identifier: connection:snowflake-demo
     object_identifier: segment:flamingo-fans
   mappings:
   - from:
