--- a/census/syncs/snowflake-flamingo-users-salesforce-lead.yml
+++ b/census/syncs/snowflake-flamingo-users-salesforce-lead.yml
@@ -9,11 +9,11 @@ sync:snowflake-flamingo-users-salesforce-lead:
       schedule:
         frequency: never
   destination:
-    connection_identifier: destination:salesforce-demo
+    connection_identifier: connection:salesforce-demo
     object_identifier: Lead
   source:
     type: segment
-    connection_identifier: data_warehouse:snowflake-demo
+    connection_identifier: connection:snowflake-demo
     object_identifier: segment:flamingo-users
   mappings:
   - from:
