--- a/census/syncs/snowflake-invoices-netsuite-netsuite-invoice.yml
+++ b/census/syncs/snowflake-invoices-netsuite-netsuite-invoice.yml
@@ -9,11 +9,11 @@ sync:snowflake-invoices-netsuite-netsuite-invoice:
       schedule:
         frequency: never
   destination:
-    connection_identifier: destination:netsuite
+    connection_identifier: connection:netsuite
     object_identifier: invoice
   source:
     type: model
-    connection_identifier: data_warehouse:snowflake-demo
+    connection_identifier: connection:snowflake-demo
     object_identifier: model:invoices-netsuite
   mappings:
   - from:
