--- a/census/syncs/snowflake-top-conversion-targets-salesforce-account.yml
+++ b/census/syncs/snowflake-top-conversion-targets-salesforce-account.yml
@@ -9,11 +9,11 @@ sync:snowflake-top-conversion-targets-salesforce-account:
       schedule:
         frequency: never
   destination:
-    connection_identifier: destination:salesforce-demo
+    connection_identifier: connection:salesforce-demo
     object_identifier: Account
   source:
     type: segment
-    connection_identifier: data_warehouse:snowflake-demo
+    connection_identifier: connection:snowflake-demo
     object_identifier: segment:top-conversion-targets
   mappings:
   - from:
